@startuml

title __RECOMMENDATIONS's Class Diagram__\n

caption Załącznik 4. Diagram klas dla rekomendacji

  namespace com.jedras.filmy {
    namespace recommendations {
      class com.jedras.filmy.recommendations.CollaborativeRecommender {
          {static} + NUMBER_OF_RECOMMENDED_MOVIES : int
          {static} + NUMBER_OF_SIMILAR_MOVIES : int
          + getRecommendations()
      }
    }
  }
  

  namespace com.jedras.filmy {
    namespace recommendations {
      class com.jedras.filmy.recommendations.DirectorRecommender {
          {static} + MIN_DIRECTOR_POPULARITY : int
          {static} + NUMBER_OF_MOST_POPULAR_DIRECTORS : int
          {static} + NUMBER_OF_RECOMMENDED_MOVIES : int
          + getRecommendations()
          + sortByValue()
          - getPopularDirectors()
      }
    }
  }
  

  namespace com.jedras.filmy {
    namespace recommendations {
      class com.jedras.filmy.recommendations.GenreRecommender {
          {static} + MIN_GENRE_POPULARITY : int
          {static} + NUMBER_OF_MOST_POPULAR_GENRE : int
          {static} + NUMBER_OF_RECOMMENDED_MOVIES : int
          + getRecommendations()
          + sortByValue()
          - getPopularGenre()
      }
    }
  }
  

  namespace com.jedras.filmy {
    namespace recommendations {
      class com.jedras.filmy.recommendations.LanguageRecommender {
          {static} + MIN_LANGUAGE_POPULARITY : int
          {static} + NUMBER_OF_MOST_POPULAR_LANGUAGE : int
          {static} + NUMBER_OF_RECOMMENDED_MOVIES : int
          + getRecommendations()
          + sortByValue()
          - getPopularLanguage()
      }
    }
  }
  

  namespace com.jedras.filmy {
    namespace recommendations {
      abstract class com.jedras.filmy.recommendations.MovieRecommender {
          ~ tmdbApi : TmdbApi
          {abstract} + getRecommendations()
          ~ MovieRecommender()
      }
    }
  }
  

  namespace com.jedras.filmy {
    namespace recommendations {
      class com.jedras.filmy.recommendations.PopularCastRecommender {
          {static} + MIN_CAST_POPULARITY : int
          {static} + NUMBER_OF_MOST_POPULAR_CAST : int
          {static} + NUMBER_OF_RECOMMENDED_MOVIES : int
          + getRecommendations()
          + sortByValue()
          - getPopularCast()
      }
    }
  }
  

  com.jedras.filmy.recommendations.CollaborativeRecommender -up-|> com.jedras.filmy.recommendations.MovieRecommender
  com.jedras.filmy.recommendations.DirectorRecommender -up-|> com.jedras.filmy.recommendations.MovieRecommender
  com.jedras.filmy.recommendations.GenreRecommender -up-|> com.jedras.filmy.recommendations.MovieRecommender
  com.jedras.filmy.recommendations.LanguageRecommender -up-|> com.jedras.filmy.recommendations.MovieRecommender
  com.jedras.filmy.recommendations.PopularCastRecommender -up-|> com.jedras.filmy.recommendations.MovieRecommender



@enduml
